--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
+    "mongoose": "^8.16.4",
     "next": "14.2.14",
+    "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
