--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.447.0",
     "mongoose": "^8.16.4",
-    "next": "14.2.14",
+    "next": "^14.2.31",
     "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
