--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "recharts": "^3.1.2",
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.5.3",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "^5.0.8"
